--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<center>
 			<h1 id="txt">Welcome</h1>
 			<br>
+			<input type="text" name="name" placeholder="Enter name please" value="" id="name">
+			<br><br>
 			<button type="button" name="button" onclick="setName()">Change name</button>
 		</center>
 
