--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 	<title>Ahmed Hammad</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 		<center>
-			<h1 id="txt">Welcome</h1>
+			<h1 id="txt">Hello World!</h1>
 			<br>
-			<input type="text" name="name" placeholder="Enter name please" value="" id="name">
-			<br><br>
-			<button type="button" name="button" onclick="setName()">Change name</button>
+			<button id="btn" type="button" name="button" onclick="changeColor()">Colorify!</button>
 		</center>
 
 	<script type="text/javascript" src="script.js"></script>
