--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <body>
 		<center>
 			<br>
-			<button id="btn" type="button" name="button" onmouseout="shrink()" onclick="changeColor()">Colorify!</button>
+			<button id="btn" type="button" name="button" onclick="changeColor()">Colorify!</button>
 		</center>
 
-		<script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
