fixed priority bug, added html components instead of prompt/alert

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,6 +5,9 @@
     <title>JS Calculator</title>
   </head>
   <body>
+    <input id="input" type="text" name="" value="" placeholder="Enter expression here.."><br><br>
+    <button type="button" name="button" onclick="calc()">Calculate</button><br>
+    <h3 id="label"></h3>
 
     <script type="text/javascript" src="stack.js"></script>
     <script type="text/javascript" src="script.js"></script>
